# arcade-ai-interview

./: .env.example  .gitignore  README.md  pyproject.toml
data/raw/: .gitkeep
docs/: README.md  api-reference.md  architecture.md  configuration.md  development.md  user-guide.md
results/: flow_analysis_report.md
scripts/: clean.sh
src/arcade_flow_analyzer/: __init__.py  __main__.py  analyzer.py  behavioral_analyzer.py  cache.py  config.py  main.py  parser.py  reporter.py
tests/: conftest.py  test_analyzer.py  test_cache.py  test_parser.py  test_reporter.py
